sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var c:Boolean = true
  var n:Int = getNombreValeurs()-2
  var f:int = 0
  while (c){
    c=false
    f+=1
    for (i<- 0 to n-f){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        c = true
      }
    }
  }
}